--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
 	</repositories>
 	<dependencies>
 		<dependency>
+			<groupId>net.sf.jopt-simple</groupId>
+			<artifactId>jopt-simple</artifactId>
+			<version>5.0.4</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>20.0</version> <!-- Last version that supports Java 7 -->
@@ -27,6 +33,12 @@
 			<version>4.5.6.201903121547-r</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+            <scope>compile</scope>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
